--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
       <title>Contact</title>
-      <link rel="stylesheet" href="Css/style.css">
+      <link rel="stylesheet" href="style.css">
       
 </head>
 
