--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
       <title>Home</title>
-      <link rel="stylesheet" href="Css/style.css">
+      <link rel="stylesheet" href="style.css">
 
 </head>
 
